--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
   <script src="app.js"></script>
   <script src="candyCtrl.js"></script>
+  <style media="screen">
+    .cy {
+      background-color: pink;
+    }
+  </style>
 </head>
 <body>
 	<div class="container" ng-controller="CandyController as CC">
@@ -22,8 +27,8 @@
           <option value="price">Price</option>
           <option value="color">Color</option>
       </select><br /><br>
-      <div class="list-group-item" ng-repeat="candy in CC.candies | orderBy:candyOrder | filter:filterSearch">
-        {{candy.name | uppercase }} - {{candy.price | currency}} - Color: {{candy.color}}
+      <div class="list-group-item" ng-repeat="candy in CC.candies | orderBy:candyOrder | filter:filterSearch" ng-class="{cy: (candy.fruity )}">
+        {{candy.name | uppercase }} - {{candy.price | currency}} - Color: {{candy.color}} - Fruity: {{candy.fruity | checkmark}}
       </div>
       <!-- [orderBy:'-name'], [orderBy:'name':true] :two ways to order by descending-->
 		</div>
