--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="candyCtrl.js"></script>
   <style media="screen">
     .cy {
-      background-color: pink;
+      background-color: {{cal}};
     }
   </style>
 </head>
@@ -27,7 +27,7 @@
           <option value="price">Price</option>
           <option value="color">Color</option>
       </select><br /><br>
-      <div class="list-group-item" ng-repeat="candy in CC.candies | orderBy:candyOrder | filter:filterSearch" ng-class="{cy: (candy.fruity )}">
+      <div class="list-group-item" ng-repeat="candy in CC.candies | orderBy:candyOrder | filter:filterSearch" ng-style="{'background-color': candy.color}">
         {{candy.name | uppercase }} - {{candy.price | currency}} - Color: {{candy.color}} - Fruity: {{candy.fruity | checkmark}}
       </div>
       <!-- [orderBy:'-name'], [orderBy:'name':true] :two ways to order by descending-->
