directives as partials

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="candyCtrl.js"></script>
   <style media="screen">
     .cy {
-      background-color: {{cal}};
+      background-color: pink;
     }
   </style>
 </head>
@@ -18,7 +18,7 @@
 	<div class="container" ng-controller="CandyController as CC">
 		<div class="row">
 			<h1>Candies!</h1>
-      <input type="text" class="form-control" name="name" placeholder="Search by Key" ng-model="filterSearch">
+      <input type="text" class="form-control" name="name" placeholder="Search" ng-model="filterSearch">
       <br />
 
       Sort By:
@@ -27,9 +27,10 @@
           <option value="price">Price</option>
           <option value="color">Color</option>
       </select><br /><br>
-      <div class="list-group-item" ng-repeat="candy in CC.candies | orderBy:candyOrder | filter:filterSearch" ng-style="{'background-color': candy.color}"><strong>{{candy.name | uppercase }} - {{candy.price | currency}} - Color: {{candy.color}} - Fruity: {{candy.fruity | checkmark}}</strong>
-      </div>
-      <!-- [orderBy:'-name'], [orderBy:'name':true] :two ways to order by descending-->
+
+      <candy-list></candy-list>
+      <!-- <span candy-list></span> : if need to access by attribute-->
+
 		</div>
 	</div>
 </body>
