work on post starts

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       <br /><br>
 
       <candy-list></candy-list>
+<br /><br>
+			<form class="col-md-6" method="post">
+				<input type="text" class="form-control" name="name" placeholder="Post Fruit">
+				<input type="submit" class="btn btn-default" name="name" value="Post Fruit">
+			</form>
       <!-- <span candy-list></span> : if need to access by attribute-->
 
 		</div>
